# 3DCurves

./: CMakeLists.txt  README.md  main.cpp  util.h
containers/: circlesContainer.cpp  circlesContainer.h  curvesContainer.cpp  curvesContainer.h
geometry/: point.cpp  point.h
geometry/curves/: circle.cpp  circle.h  curve.cpp  curve.h  ellipse.cpp  ellipse.h  helix.cpp  helix.h
